# MyLinearAlgebra

./: CMakeLists.txt  Readme.md  readme.md  xmake.lua
Sources/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  mla.h  utility.hpp
Tests/: TestMatrix.cpp  TestVector.cpp  tool.hpp  tools.hpp
sources/: Matrix.h  utility.hpp
tests/: TestMatrix.cpp  TestVector.cpp
